add assessment of reviews datasets

--- a/2018-04-04-jcl-final-analysis.ipynb
+++ b/2018-04-04-jcl-final-analysis.ipynb
@@ -144,10 +144,8 @@
    "outputs": [],
    "source": [
     "# Specify paths to data and filenames\n",
-    "path_bos, path_sea = 'data/boston/', 'data/seattle/'\n",
-    "filenames = ['calendar', 'listings', 'reviews']\n",
-    "# Instantiate dictionaries to store data \n",
-    "data, boston, seattle = dict(), dict(), dict()"
+    "cities = ['Boston', 'Seattle']\n",
+    "filenames = ['calendar', 'listings', 'reviews']"
    ]
   },
   {
@@ -157,13 +155,15 @@
    "outputs": [],
    "source": [
     "# Read csv files and store in hierarchical dictionary\n",
-    "for name in filenames:\n",
-    "    # Boston data\n",
-    "    boston[name] = pd.read_csv(path_bos + name + '.csv', sep=',', quotechar='\"')\n",
-    "    data['Boston'] = boston\n",
-    "    # Seattle data\n",
-    "    seattle[name] = pd.read_csv(path_sea + name + '.csv', sep=',', quotechar='\"')\n",
-    "    data['Seattle'] = seattle"
+    "data = dict()\n",
+    "# Loop over cities\n",
+    "for city in cities:\n",
+    "    data[city] = dict()\n",
+    "    # Loop over files\n",
+    "    for filename in filenames:\n",
+    "        # Read csv into dictionary\n",
+    "        path = 'data/' + city + '/' + filename + '.csv'\n",
+    "        data[city][filename] = pd.read_csv(path, sep=',', quotechar='\"')"
    ]
   },
   {
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1512,7 +1512,7 @@
        "    <tr>\n",
        "      <th>top</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>2016-10-29</td>\n",
+       "      <td>2017-04-01</td>\n",
        "      <td>f</td>\n",
        "      <td>$150.00</td>\n",
        "    </tr>\n",
@@ -1595,7 +1595,7 @@
        "dtype         int64      object    object   object\n",
        "count   1.30889e+06     1308890   1308890   643037\n",
        "unique          NaN         365         2     1246\n",
-       "top             NaN  2016-10-29         f  $150.00\n",
+       "top             NaN  2017-04-01         f  $150.00\n",
        "freq            NaN        3586    665853    20752\n",
        "mean    8.44212e+06         NaN       NaN      NaN\n",
        "std     4.50015e+06         NaN       NaN      NaN\n",
@@ -1641,12 +1641,12 @@
      "output_type": "stream",
      "text": [
       "Sample of \"price\" data in Boston:\n",
-      "['$65.00' '$149.00' '$35.00' '$176.00' '$239.00' '$119.00' '$70.00'\n",
-      " '$86.00' '$145.00' '$120.00'] \n",
+      "['$58.00' '$299.00' '$109.00' '$86.00' '$434.00' '$700.00' '$80.00'\n",
+      " '$225.00' '$65.00' '$245.00'] \n",
       "\n",
       "Sample of \"price\" data in Seattle:\n",
-      "['$101.00' '$125.00' '$90.00' '$79.00' '$104.00' '$51.00' '$85.00'\n",
-      " '$45.00' '$95.00' '$110.00'] \n",
+      "['$299.00' '$100.00' '$99.00' '$59.00' '$65.00' '$54.00' '$119.00'\n",
+      " '$28.00' '$65.00' '$176.00'] \n",
       "\n"
      ]
     }
@@ -1783,12 +1783,12 @@
      "output_type": "stream",
      "text": [
       "Sample of \"date\" feature in Boston:\n",
-      "['2016-10-01' '2017-07-27' '2017-03-12' '2017-05-08' '2017-08-20'\n",
-      " '2017-05-20' '2017-06-29' '2017-07-14' '2017-05-21' '2017-02-02'] \n",
+      "['2017-03-26' '2016-09-22' '2017-04-25' '2017-03-03' '2017-02-17'\n",
+      " '2017-03-11' '2016-09-18' '2017-08-12' '2017-06-09' '2016-11-06'] \n",
       "\n",
       "Sample of \"date\" feature in Seattle:\n",
-      "['2016-03-05' '2016-06-14' '2016-08-31' '2016-11-12' '2016-06-16'\n",
-      " '2016-08-19' '2016-07-16' '2016-09-17' '2016-05-27' '2016-10-19'] \n",
+      "['2016-12-26' '2016-12-03' '2016-10-31' '2016-09-08' '2016-10-16'\n",
+      " '2016-01-29' '2016-01-08' '2016-07-18' '2016-11-18' '2016-11-21'] \n",
       "\n"
      ]
     }
@@ -1960,7 +1960,7 @@
        "    <tr>\n",
        "      <th>top</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>2016-10-29</td>\n",
+       "      <td>2017-04-01</td>\n",
        "      <td>f</td>\n",
        "      <td>$150.00</td>\n",
        "      <td>NaN</td>\n",
@@ -2135,7 +2135,7 @@
        "dtype         int64      object    object   object  float64        int64   \n",
        "count   1.30889e+06     1308890   1308890   643037   643037  1.30889e+06   \n",
        "unique          NaN         365         2     1246      NaN          NaN   \n",
-       "top             NaN  2016-10-29         f  $150.00      NaN          NaN   \n",
+       "top             NaN  2017-04-01         f  $150.00      NaN          NaN   \n",
        "freq            NaN        3586    665853    20752      NaN          NaN   \n",
        "first           NaN         NaN       NaN      NaN      NaN          NaN   \n",
        "last            NaN         NaN       NaN      NaN      NaN          NaN   \n",
@@ -2205,7 +2205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2458,12 +2458,14 @@
     "\n",
     "Before jumping into the analyses below, we need to determine whether the quantity of reviews for the listings in the `calendar` datasets is (1) a constant number or (2) a variable that changes across the time dimension of the panel data. \n",
     "\n",
-    "In order to know this I will look into the dates of last recorded review in both `reviews` datasets; and I will compare these dates with the dates of first recorded prices in the `calendar` datasets."
+    "Statistics concerning reviews per listing are recorded in two of the datasets: `listings` and `reviews`. In `listings`, reviews are recorded as a constant number per listing, since this dataset is cross-sectional (i.e., it doesn't incorporate a time dimension). In `reviews`, on the other hand, reviews are recorded across time; so I will look into the dates of last recorded review in the `reviews` datasets and I will compare these dates with the dates of first recorded prices in the `calendar` datasets. If these date overlap, then it is possible that we could have a measurement for guest reviews over time in the `calendar` dataset.\n",
+    "\n",
+    "#### 4.3.1.  Count of reviews in the `reviews` datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2486,7 +2488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2516,7 +2518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2530,7 +2532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2541,18 +2543,152 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below I use the data in the `reviews` datasets to add the column 'total_reviews' to the `calendar` datasets."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create 'total_reviews'\n",
+    "# Add column for 'total_reviews' to the calendar datasets\n",
     "eng_feat = 'total_reviews'\n",
     "# Loop over cities and create 'total_reviews'\n",
     "for city in data.keys():\n",
     "    data[city]['calendar'][eng_feat] = data[city]['calendar']['listing_id'].apply(\n",
     "        lambda x: reviews_totals[city].loc[x] \n",
     "        if x in reviews_count[city].index else 0)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.3.2.  Count of reviews in the `listings` datasets\n",
+    "\n",
+    "As noted above,the `listings` datasets also include data concerning reviews per listing. \n",
+    "\n",
+    "First I will investigate whether these features have issues with missing data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of missing values in columns\n",
+      "associated with reviews.\n",
+      "\n",
+      "       — Boston —        \n",
+      "review_scores_accuracy         23.0%\n",
+      "review_scores_location         22.9%\n",
+      "review_scores_value            22.9%\n",
+      "review_scores_checkin          22.9%\n",
+      "review_scores_communication    22.8%\n",
+      "review_scores_cleanliness      22.8%\n",
+      "review_scores_rating           22.7%\n",
+      "reviews_per_month              21.1%\n",
+      "last_review                    21.1%\n",
+      "first_review                   21.1%\n",
+      "number_of_reviews               0.0%\n",
+      "dtype: object\n",
+      "\n",
+      "       — Seattle —       \n",
+      "review_scores_checkin          17.2%\n",
+      "review_scores_accuracy         17.2%\n",
+      "review_scores_value            17.2%\n",
+      "review_scores_location         17.2%\n",
+      "review_scores_cleanliness      17.1%\n",
+      "review_scores_communication    17.1%\n",
+      "review_scores_rating           16.9%\n",
+      "reviews_per_month              16.4%\n",
+      "last_review                    16.4%\n",
+      "first_review                   16.4%\n",
+      "number_of_reviews               0.0%\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print title\n",
+    "print('Percentage of missing values in columns')\n",
+    "print('associated with reviews.')\n",
+    "# Loop over cities\n",
+    "for city in cities:\n",
+    "    # Calculate percent missing values per column\n",
+    "    df = data[city]['listings'].filter(like='review', axis=1)\n",
+    "    pc = df.isnull().sum() / df.shape[0] * 100\n",
+    "    # Sort, format, and print series of percentages\n",
+    "    sorted_pc = pc.sort_values(ascending=False).apply(\n",
+    "                    lambda x: '{:2.1f}%'.format(x))\n",
+    "    print('\\n{:^25}'.format('— ' + city + ' —'))\n",
+    "    print(sorted_pc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Most of the columns with data about reviews have around 20% missing values, with the single exception of total reviews (`number_of_reviews`). I will keep this column and add the data to the `calendar` datasets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add column for 'number_of_reviews' to the calendar datasets\n",
+    "for city in cities:\n",
+    "    data[city]['calendar'] = data[city]['calendar'].merge(\n",
+    "                                data[city]['listings'][['number_of_reviews']],\n",
+    "                                how='left', left_on='listing_id', \n",
+    "                                right_on=data[city]['listings']['id'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.3.3. `total_reviews` vs. `number_of_reviews`\n",
+    "\n",
+    "The data in `total_reviews` comes from the `reviews` datasets while `number_of_reviews` comes from the `listings` datasets; here I assess whether these two sources provide the same information:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Does 'number_of_reviews' and 'total_reviews' contain the same data?\n",
+      "- Answer: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = data[city]['calendar']['number_of_reviews'].equals(\n",
+    "        data[city]['calendar']['total_reviews'])\n",
+    "print(\"Does 'number_of_reviews' and 'total_reviews' contain the same data?\") \n",
+    "print(\"- Answer: {}\".format(temp))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The test above confirms that both columns contain the same data measuring the review count per listing."
    ]
   },
   {
