style: Edit docstrings

--- a/jcl-airbnb.ipynb
+++ b/jcl-airbnb.ipynb
@@ -935,7 +935,7 @@
     "    availability status.\n",
     "\n",
     "    Args: \n",
-    "        status (str): 'available' or 'unavailable'\n",
+    "        status (str): 'available' or 'unavailable'.\n",
     "\n",
     "    \"\"\"\n",
     "    if status == 'available':\n",
@@ -1714,7 +1714,7 @@
     "    \"\"\"Re-encode string of a dollar amount to float.\n",
     "    \n",
     "    Args: \n",
-    "        price_str (str): Price value with dollar symbol and comma \n",
+    "        price_str (str): Price value with dollar symbol and comma.\n",
     "    \n",
     "    Returns: \n",
     "        price (np.float32)\n",
